Fixed #36948 -- Fixed breadcrumb text overlap at small widths.

--- a/django/contrib/admin/static/admin/css/base.css
+++ b/django/contrib/admin/static/admin/css/base.css
@@ -767,7 +767,6 @@ ol.breadcrumbs li {
     display: inline-block;
     font-size: 0.875rem;
     padding: 0;
-    line-height: 0;
 }
 
 ol.breadcrumbs li:not([aria-current="page"])::after {
